--- a/Feedweb.css
+++ b/Feedweb.css
@@ -29,7 +29,7 @@
 
 .FeedwebSettingsTabs a
 {
-	width: 200px;
+	width: 215px;
 	color: #000000;
 	font-size: 12px;
 	font-weight: bold;
@@ -41,15 +41,14 @@
 	display: block;
     float: left;
     height: 18px;
-    line-height: 22px;
     margin: 0 10px 0 0;
-    padding: 4px 8px;
+    padding: 6px 8px;
     text-decoration: none;	
 }
 
 .FeedwebSettingsTabs a:hover
 {
-	width: 200px;
+	width: 215px;
 	color: #ffffff;
 	font-size: 12px;
 	font-weight: bold;
@@ -61,9 +60,8 @@
     display: block;
     float: left;
     height: 18px;
-    line-height: 22px;
     margin: 0 10px 0 0;
-    padding: 4px 8px;
+    padding: 6px 8px;
     text-decoration: none;	
 }
 
@@ -75,9 +73,10 @@
 
 .FeedwebSettingsCommitButton td
 {
+	background-color: #E0E0FF;
 	border: 1px solid #C0C0C0;
 	border-top-style: none;
-	padding: 0px 4px 4px 8px;
+	padding: 8px 8px 8px 8px;
 }
 
 .FeedwebSettingsTable tbody tr td
