git-svn-id: https://plugins.svn.wordpress.org/feedweb/trunk@552225 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/Feedweb.css
+++ b/Feedweb.css
@@ -90,3 +90,26 @@
 	padding-top: 8px;
 	padding-bottom: 8px;
 }
+
+/*
+.FeedwebWidgetDialog
+{
+    color: #555555;
+    font-size: 12px;
+}
+
+.FeedwebWidgetDialog tr
+{
+	height: 24px;
+	vertical-align: bottom;
+}
+
+.FeedwebWidgetDialog td
+{
+	margin-left: 8px;
+}
+
+.FeedwebWidgetDialog span
+{
+}
+*/
