--- a/Feedweb.css
+++ b/Feedweb.css
@@ -91,25 +91,13 @@
 	padding-bottom: 8px;
 }
 
-/*
-.FeedwebWidgetDialog
+#PurgeInactiveWidgetsButton
 {
-    color: #555555;
-    font-size: 12px;
+	background-color: #ff0000;
+	border-radius: 12px;
+	padding-right: 20px;
+	padding-left: 20px;
+	font-weight: bold;
+	color: #ffffff;
+	float: right;
 }
-
-.FeedwebWidgetDialog tr
-{
-	height: 24px;
-	vertical-align: bottom;
-}
-
-.FeedwebWidgetDialog td
-{
-	margin-left: 8px;
-}
-
-.FeedwebWidgetDialog span
-{
-}
-*/
