--- a/Feedweb.css
+++ b/Feedweb.css
@@ -50,6 +50,7 @@
 {
 	border: 1px solid #C0C0C0;
 	border-bottom-style: none;
+	overflow: hidden;
 }
 
 .FeedwebSettingsCommitButton td
@@ -67,14 +68,14 @@
 
 .FeedwebSettingsTable td
 {
+	padding-top: 2px;
+	padding-left: 8px;
+	padding-bottom: 2px;
 	border-color: #C0C0C0;
 	border-top-style: none;
 	border-left-style: none;
 	border-right-style: none;
 	border-bottom-style: dotted;
-	padding-left: 8px;
-	padding-top: 2px;
-	padding-bottom: 2px;
 }
 
 #PurgeInactiveWidgetsButton
@@ -230,4 +231,14 @@ Widget Wizard
 	display: none;
 	width: 450px;
 	height: 40px;
+}
+
+#WidgetTypeFlashRadio
+{
+	margin-left: 50px;
+}
+
+#WidgetPreviewTitle
+{
+	font-weight: bold;
 }
