--- a/Feedweb.css
+++ b/Feedweb.css
@@ -1,32 +1,6 @@
-.FeedwebPostDataTable 
-{
-	border-collapse: collapse;
-	border-style: none;
-}
-
-.FeedwebPostDataTable tbody 
-{
-	border-top: 0px; 
-	border-left: 0px; 
-	border-style: none;
-}
-
-.FeedwebPostDataTable tbody tr 
-{
-	border-top: 0px; 
-	border-left: 0px; 
-	border-style: none;
-}
-
-.FeedwebPostDataTable tbody tr td 
-{
-	vertical-align: middle;
-	text-align: center;
-	border-bottom-style: none; 
-	border-top-style: solid; 
-	padding: 0 0 0 0;
-}
-
+/*-------------------------
+Plugin Settings
+--------------------------*/
 .FeedwebSettingsTab
 {
 	width: 270px;
@@ -44,6 +18,11 @@
     margin: 0 10px 0 0;
     padding: 6px 8px;
     text-decoration: none;	
+}
+
+.FeedwebSettingsContent select
+{
+	width: 170px;
 }
 
 .FeedwebSettingsContent td
@@ -78,6 +57,78 @@
 	border-bottom-style: dotted;
 }
 
+.DescriptionColumn
+{
+	vertical-align: middle;
+}
+
+#WidgetTypeHTML5Radio
+{
+	position: relative;
+	left: 0px;
+	top: 0px;
+}
+
+#WidgetTypeHTML5Label
+{
+	position: relative;
+	left: 4px;
+	top: 0px;
+}
+
+#WidgetTypeFlashRadio
+{
+	position: relative;
+	left: 40px;
+	top: 0px;
+}
+
+#WidgetTypeFlashLabel
+{
+	position: relative;
+	left: 44px;
+	top: 0px;
+}
+
+#WidgetWidthEdit
+{
+	top: -4px; 
+	width: 128px; 
+	position: relative; 
+	border-radius: 2px;
+}
+
+#ExternalBackgroundBox
+{
+	top: -2px; 
+	width: 120px; 
+	position: relative; 
+	border-radius: 2px;
+	border: 1px solid #D0D0D0; 
+}
+
+#ExternalBackgroundResetButton
+{
+	position: relative; 
+	cursor: pointer;
+	left: 16px;
+	top: 6px;
+}
+
+#WidgetWidthResetButton
+{
+	position: relative; 
+	cursor: pointer;
+	left: 14px;
+	top: 4px;
+}
+
+.DescriptionWarningText
+{
+	font-size: 8pt; 
+	color: #ff0000;
+}
+
 #PurgeInactiveWidgetsButton
 {
 	background-color: #ff0000;
@@ -89,11 +140,10 @@
 	float: right;
 }
 
-#WidgetTypeFlashRadio
+#WidgetPreviewTitle
 {
-	margin-bottom: 10px;
+	font-weight: bold;
 }
-
 
 
 /*-------------------------
@@ -102,6 +152,11 @@ Widget Wizard
 .WizardContentRow td
 {
 	height: 56px;
+}
+
+.WizardContentRow  #WidgetLanguageBox
+{
+	width: 310px; 
 }
 
 .WizardButtonRow td
@@ -231,14 +286,4 @@ Widget Wizard
 	display: none;
 	width: 450px;
 	height: 40px;
-}
-
-#WidgetTypeFlashRadio
-{
-	margin-left: 50px;
-}
-
-#WidgetPreviewTitle
-{
-	font-weight: bold;
 }
