--- a/Feedweb.css
+++ b/Feedweb.css
@@ -62,31 +62,45 @@ Plugin Settings
 	vertical-align: middle;
 }
 
-#WidgetTypeHTML5Radio
+.RadioDiv
 {
-	position: relative;
+	top: 4px;
 	left: 0px;
-	top: 0px;
+	width: 100%;
+	height: 24px;
+	display: block;
+	position: relative;
 }
 
-#WidgetTypeHTML5Label
+#WidgetTypeHTML5Radio,
+#WidgetPlaceTopRadio
 {
-	position: relative;
+	position: absolute;
 	left: 4px;
 	top: 0px;
 }
 
-#WidgetTypeFlashRadio
+#WidgetTypeHTML5Label,
+#WidgetPlaceTopLabel
 {
-	position: relative;
-	left: 40px;
+	position: absolute;
+	left: 20px;
 	top: 0px;
 }
 
-#WidgetTypeFlashLabel
+#WidgetTypeFlashRadio,
+#WidgetPlaceBottomRadio
 {
-	position: relative;
-	left: 44px;
+	position: absolute;
+	left: 94px;
+	top: 0px;
+}
+
+#WidgetTypeFlashLabel,
+#WidgetPlaceBottomLabel
+{
+	position: absolute;
+	left: 110px;
 	top: 0px;
 }
 
