--- a/Feedweb.css
+++ b/Feedweb.css
@@ -3,21 +3,19 @@ Plugin Settings
 --------------------------*/
 .FeedwebSettingsTab
 {
-	width: 270px;
-	color: #000000;
-	font-size: 12px;
-	font-weight: bold;
-	background-color: #ffffff;
-	
-    border: 1px solid #C0C0C0;
-	border-bottom-style: none;
-    
-	display: block;
     float: left;
     height: 18px;
-    margin: 0 10px 0 0;
+	width: 270px;
+	color: #000000;
+	display: block;
+	font-size: 12px;
     padding: 6px 8px;
+	font-weight: bold;
+    margin: 0 10px 0 0;
     text-decoration: none;	
+    border: 1px solid #C0C0C0;
+	border-bottom-style: none;
+	background-color: #ffffff;
 }
 
 .FeedwebSettingsContent select
@@ -36,8 +34,8 @@ Plugin Settings
 {
 	background-color: #E0E0FF;
 	border: 1px solid #C0C0C0;
-	border-top-style: none;
 	padding: 8px 8px 8px 8px;
+	border-top-style: none;
 }
 
 .FeedwebSettingsTable tr
@@ -72,35 +70,31 @@ Plugin Settings
 	position: relative;
 }
 
-#WidgetTypeHTML5Radio,
 #WidgetPlaceTopRadio
 {
 	position: absolute;
 	left: 4px;
-	top: 0px;
+	top: 4px;
 }
 
-#WidgetTypeHTML5Label,
 #WidgetPlaceTopLabel
 {
 	position: absolute;
-	left: 20px;
+	left: 25px;
 	top: 0px;
 }
 
-#WidgetTypeFlashRadio,
 #WidgetPlaceBottomRadio
 {
 	position: absolute;
 	left: 94px;
-	top: 0px;
+	top: 4px;
 }
 
-#WidgetTypeFlashLabel,
 #WidgetPlaceBottomLabel
 {
 	position: absolute;
-	left: 110px;
+	left: 115px;
 	top: 0px;
 }
 
@@ -159,7 +153,6 @@ Plugin Settings
 	font-weight: bold;
 }
 
-
 #CSSEditorDiv
 {
 	top: 90px;
@@ -176,7 +169,7 @@ Plugin Settings
 
 #CSSEditorTitle
 {
-	top: 12px;
+	top: 14px;
 	left: 12px;
 	font-size: 12pt;
 	position: absolute;
@@ -184,11 +177,11 @@ Plugin Settings
 
 #CSSTextEditor
 {
-	top: 38px;
+	top: 48px;
 	left: 8px;
 	width: 882px;    
 	resize: none;
-	height: 450px;
+	height: 440px;
     position: absolute;
     background-color: #ffffff;
     border: solid 1px #808080;
@@ -196,77 +189,435 @@ Plugin Settings
 
 #RestoreCSSButton
 {
-	top: 8px;
+	top: 10px;
 	right: 60px;
 	width: 150px;
-	height: 24px;
+	height: 28px;
 	position: absolute;
 }
 
 #SaveCSSButton
 {
-	top: 8px;
+	top: 10px;
 	right: 240px;
 	width: 150px;
-	height: 24px;
+	height: 28px;
 	position: absolute;
 }
 
 #CloseCSSEditorButton
 {
-	top: 8px;
-	right: 8px;
+	top: 12px;
+	right: 12px;
 	position: absolute;
 }
 
 /*-------------------------
 Widget Wizard
 --------------------------*/
-.WizardContentRow td
+#WidgetDialog, #WidgetDialog span, #WidgetDialog input
 {
-	height: 56px;
+	font-family: Verdana;
+	font-size: 9pt;
 }
 
-.WizardContentRow  #WidgetLanguageBox
+.WidgetWizardPage
 {
-	width: 310px; 
+	position: absolute;
+	visibility: hidden;
+	left: 0;
+	top: 0;
 }
 
-.WizardButtonRow td
+/*-------------------------
+Widget Navigator
+--------------------------*/
+#WizardNavigatorDiv
 {
-	padding-top: 24px;
-}
-
-#PublishWidgetDiv
-{
-	position: relative;
+	top: 320px; 
+	width: 100%; 
+	height: 50px;
 	display: block;
-	height: 56px;
-	width: 100%;
+	position: absolute; 
+} 
+
+#WizardNavigatorDiv input
+{
+	position: absolute; 
+	width: 150px;
+	height: 28px;
+	top: 10px;
+}
+
+#WizardNavigatorDiv #DeleteButton
+{
+	left: 20px; 
+}
+
+#WizardNavigatorDiv #BackButton
+{
+	visibility: hidden;
+	left: 20px; 
+}
+
+#WizardNavigatorDiv #NextButton
+{
+	left: 360px; 	
+}
+
+#WizardNavigatorDiv #OkButton
+{
+	visibility: hidden;
+	left: 360px; 	
+}
+
+#WizardNavigatorDiv #CancelButton
+{
+	left: 530px;
+}
+
+/*-------------------------
+Widget Wizard - Title Div
+--------------------------*/
+#TitleLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 16px;
+}
+
+#TitleText, #TitleBox
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 34px;
+}
+
+#UrlLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 74px;
+}
+
+#UrlText
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 92px;
+}
+
+#AuthorLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 132px;
+}
+
+#AuthorBox
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 150px;
+}
+
+#LanguageLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 190px;
+}
+
+#WidgetTitleDiv #WidgetLanguageBox
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 208px;
 }
 
 #PublishWidgetCheckBox
 {
 	position: absolute;
-	left: 5px;
-	top: 5px;
+	left: 16px;
+	top: 256px;
 }
 
 #PublishWidgetLabel
 {
 	position: absolute;
 	font-weight: bold;
-	left: 25px;
-	top: 5px;
+	width: 600px;
+	left: 40px;
+	top: 258px;
 }
 
+/*-------------------------
+Widget Wizard - Brief Div
+--------------------------*/
+#SummaryLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 16px;
+}
+
+#SummaryText
+{
+	position: absolute;
+	resize: none;
+	height: 54px;
+	width: 660px;
+	left: 20px;
+	top: 34px;
+}
+
+#CategoryLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 100px;
+}
+
+#CategoryText
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 118px;
+}
+
+#TagLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 154px;
+}
+
+#TagText
+{
+	position: absolute;
+	width: 660px;
+	height: 24px;
+	left: 20px;
+	top: 172px;
+}
+
+#CensorshipLabel
+{
+	position: absolute;
+	left: 20px;
+	top: 212px;
+}
+
+#CensorshipBox
+{
+	position: absolute;
+	width: 150px;
+	height: 24px;
+	left: 20px;
+	top: 230px;
+}
+
+.CensorshipText
+{
+	font-style: italic;	
+	position: absolute;
+	display: none;
+	width: 450px;
+	height: 40px;
+	left: 200px;
+	top: 232px;
+}
+
+#AdContentCheckBox
+{
+	position: absolute;
+	left: 18px;
+	top: 280px;
+}
+
+#AdContentLabel
+{
+	position: absolute;
+	font-weight: bold;
+	width: 600px;
+	left: 40px;
+	top: 282px;
+}
+
+/*-------------------------
+Widget Wizard - Image Div
+--------------------------*/
+#ImageUrlLabel
+{
+	position: absolute;
+	width: 660px;
+	left: 20px;
+	top: 16px;
+}
+
+#WidgetImageList, #WidgetImageUrl
+{
+	position: absolute;
+	width: 490px;
+	height: 24px;
+	left: 20px;
+	top: 34px;
+}
+
+#SetImageButton
+{
+	position: absolute;
+	width: 150px;
+	height: 28px;
+	left: 530px;
+	top: 31px;
+}
+
+#WidgetImageBox
+{
+	border: 1px solid #C0C0C0; 
+	position: absolute;
+	text-align: center; 
+	overflow: hidden; 
+	height: 220px; 
+	width: 656px;
+	left: 21px;
+	top: 80px;
+}
+
+#WidgetImage
+{
+	position: relative; 
+	display: none;
+}
+
+/*-------------------------
+Widget Wizard - Question Div
+--------------------------*/
+#OldQuestionsLabel
+{
+	position: absolute;
+	width: 490px;
+	left: 20px;
+	top: 16px;
+}
+
+#OldQuestionsList
+{
+	position: absolute;
+	width: 490px;
+	height: 24px;
+	left: 20px;
+	top: 34px;
+}
+
+#SelectQuestionButton
+{
+	position: absolute;
+	width: 150px;
+	height: 28px;
+	left: 530px;
+	top: 30px;
+}
+
+#NewQuestionLabel
+{
+	position: absolute;
+	width: 490px;
+	left: 20px;
+	top: 74px;
+}
+
+#NewQuestionText
+{
+	position: absolute;
+	width: 490px;
+	height: 24px;
+	left: 20px;
+	top: 92px;
+}
+
+#AddQuestionButton
+{
+	position: absolute;
+	width: 150px;
+	height: 28px;
+	left: 530px;
+	top: 90px;
+}
+
+#QuestionsLabel
+{
+	position: absolute;
+	width: 490px;
+	left: 20px;
+	top: 132px;
+}
+
+#QuestionsList
+{
+	position: absolute;
+	height: 148px;
+	width: 490px;
+	left: 20px;
+	top: 150px;
+}
+
+#MoveUpQuestionButton
+{
+	position: absolute;
+	left: 530px;
+	width: 150px;
+	height: 28px;
+	top: 150px;
+}
+
+#MoveDownQuestionButton
+{
+	position: absolute;
+	width: 150px;
+	height: 28px;
+	left: 530px;
+	top: 210px;
+}
+
+#RemoveQuestionButton
+{
+	position: absolute;
+	width: 150px;
+	height: 28px;
+	left: 530px;
+	top: 270px;
+}
+
+/*-------------------------
+Widget Wizard - TOS
+--------------------------*/
 #TermsOfServiceDisclaimer
 {
 	position: absolute;
 	font-size: 8pt;
 	display: none;
-	left: 25px;
-	top: 30px;
+	width: 600px;
+	left: 40px;
+	top: 280px;
 }
 
 #TermsOfServiceDiv
@@ -283,80 +634,25 @@ Widget Wizard
 {
 	position: absolute;
 	font-weight: bold;
-	left: 18px;
+	left: 20px;
 	top: 15px;
 }
 
 #TermsOfServiceText
 {
 	top: 40px;
-	left: 18px;
-	width: 670px;
+	left: 20px;
+	width: 660px;
 	resize: none;
-	height: 280px;
+	height: 264px;
 	position: absolute;
 }
 
 #TermsOfServiceCloseButton
 {
-	right: 15px;
-	bottom: 10px;
+	top: 330px;
+	right: 20px;
 	width: 150px;
-	height: 30px;
+	height: 28px;
 	position: absolute;
-}
-
-#SummaryTextRow td
-{
-	height: 80px;
-}
-
-#SummaryText
-{
-	resize: none;
-	height: 50px;
-	width: 100%;
-}
-
-#TopicRow td
-{
-	height: 55px;
-}
-
-#AdContentRow td
-{
-	height: 50px;
-	padding-top: 15px;
-}
-
-#AdContentCheckBox
-{
-	margin-left: 5px;
-}
-
-#AdContentLabel
-{
-	font-weight: bold;
-	padding-left: 5px;
-}
-
-#CensorshipRow td
-{
-	height: 60px;
-	overflow: hidden;
-}
-
-#CensorshipBox
-{
-	width: 150px;
-}
-
-.CensorshipText
-{
-	font-style: italic;	
-	margin-left: 170px;
-	margin-top: -25px;
-	display: none;
-	width: 450px;
-	height: 40px;
 }
