--- a/Feedweb.css
+++ b/Feedweb.css
@@ -20,7 +20,7 @@ Plugin Settings
 
 .FeedwebSettingsContent select
 {
-	width: 170px;
+	width: 200px;
 }
 
 .FeedwebSettingsContent td
@@ -58,6 +58,24 @@ Plugin Settings
 .DescriptionColumn
 {
 	vertical-align: middle;
+}
+
+#ChooseColorSchemePrompt
+{
+	position: relative;
+	font-style: italic;
+	display: block;
+	top: 6px;	
+}
+
+#CustomCSSValidityPrompt
+{
+	position: relative;
+	font-style: italic;
+	visibility: hidden;
+	display: block;
+	color: red;
+	top: 24px;	
 }
 
 .RadioDiv
@@ -100,8 +118,8 @@ Plugin Settings
 
 #WidgetWidthEdit
 {
-	top: -4px; 
-	width: 128px; 
+	top: -2px; 
+	width: 100px; 
 	position: relative; 
 	border-radius: 2px;
 }
@@ -109,26 +127,46 @@ Plugin Settings
 #ExternalBackgroundBox
 {
 	top: -2px; 
-	width: 120px; 
+	width: 100px; 
 	position: relative; 
 	border-radius: 2px;
 	border: 1px solid #D0D0D0; 
+}
+
+#EditWidgetCSSButton
+{
+	top: 1px; 
+	left: 2px;
+	width: 200px; 
+	position: relative; 
 }
 
 #ExternalBackgroundResetButton
 {
 	position: relative; 
 	cursor: pointer;
-	left: 16px;
-	top: 6px;
+	left: 76px;
+	top: 4px;
 }
 
 #WidgetWidthResetButton
 {
 	position: relative; 
 	cursor: pointer;
-	left: 14px;
+	left: 72px;
 	top: 4px;
+}
+
+#LayoutInfoText
+{
+	display: block;
+	margin-top: 6px;
+}
+
+#WideLayoutDisclaimer
+{
+	display: block;
+	margin-top: -4px;
 }
 
 .DescriptionWarningText
@@ -158,7 +196,7 @@ Plugin Settings
 	top: 90px;
 	left: 0px;
 	z-index: 100;
-	width: 900px; 
+	width: 1000px; 
 	height: 500px; 
 	display: block; 
 	visibility: hidden; 
@@ -179,12 +217,18 @@ Plugin Settings
 {
 	top: 48px;
 	left: 8px;
-	width: 882px;    
+	width: 982px;    
 	resize: none;
 	height: 440px;
     position: absolute;
     background-color: #ffffff;
     border: solid 1px #808080;
+}
+
+#OriginalCSSText
+{
+	display: none;
+	visibility: hidden;
 }
 
 #RestoreCSSButton
