--- a/Feedweb.css
+++ b/Feedweb.css
@@ -175,15 +175,40 @@ Plugin Settings
 	color: #ff0000;
 }
 
+.FeedwebSettingsCommitButton div
+{
+	position: relative;
+	display: block;
+	height: 40px;
+	width: 100%;
+}
+
+.FeedwebSettingsCommitButton div input
+{
+	position: absolute;
+	font-weight: bold;
+	width: 250px;
+	height: 28px;
+	top: 6px;
+}
+
 #PurgeInactiveWidgetsButton
 {
 	background-color: #ff0000;
-	border-radius: 12px;
-	padding-right: 20px;
-	padding-left: 20px;
-	font-weight: bold;
+	border-radius: 4px;
 	color: #ffffff;
-	float: right;
+	border: none;
+	right: 8px;
+}
+
+#ResetFeederButton
+{
+	background-color: #445566;
+	border-radius: 4px;
+	visibility: hidden;
+	color: #ffffff;
+	border: none;
+	right: 8px;
 }
 
 #WidgetPreviewTitle
