--- a/Feedweb.css
+++ b/Feedweb.css
@@ -5,7 +5,7 @@ Plugin Settings
 {
     float: left;
     height: 18px;
-	width: 270px;
+	width: 300px;
 	color: #000000;
 	display: block;
 	font-size: 12px;
@@ -46,13 +46,19 @@ Plugin Settings
 .FeedwebSettingsTable td
 {
 	padding-top: 2px;
-	padding-left: 8px;
 	padding-bottom: 2px;
 	border-color: #C0C0C0;
 	border-top-style: none;
 	border-left-style: none;
 	border-right-style: none;
 	border-bottom-style: dotted;
+}
+
+.FeedwebSettingsTable td span
+{
+	display: block;
+	padding-left: 8px;
+	padding-right: 8px;
 }
 
 .DescriptionColumn
